# extraetf

./: LICENSE  README.md  development.md  pyproject.toml
notebooks/: exploration-etfs.ipynb  exploration-stocks.ipynb
src/extraetf/: etfs.py  funds.py  stocks.py
src/extraetf/resources/: etf_filters.json  stock_filters.json
tests/: test_etfs.py
